fixed scrollbar making page wider

--- a/css/base.css
+++ b/css/base.css
@@ -7,10 +7,10 @@
 header {
   display: flex;
   justify-content: center;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   background-color: var(--color-pokemon-darkred);
   height: 7em;
-  min-width: 100vw;
+  width: 100vw;
   box-shadow: var(--shadow);
 }
 
@@ -19,9 +19,10 @@ footer {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  background-color: #dadada;
+  background-color: rgba(0, 0, 0, 0.685);
   position: fixed;
   bottom: 0em;
+  color: white;
 }
 
 body {
@@ -32,6 +33,10 @@ body {
   background-position: 600em;
   backdrop-filter: blur(5px); */
 }
+
+body::-webkit-scrollbar{
+    display: none;
+  }
 
 p {
   font-size: 1.3em;
@@ -61,7 +66,7 @@ p {
   /* height: 80vh; */
   height: fit-content;
   padding-bottom: 2em;
-  box-shadow: var(--shadow);
+  /* box-shadow: var(--shadow); */
 }
 
 
@@ -227,7 +232,7 @@ p {
 .container__reserve-pokemon-slots {
     min-height: 10em;
     text-align: center;
-    background-color: rgba(0, 0, 0, 0.685);
+    background-color: rgb(0, 0, 0);
     color: white;
     margin-top: 1em;
     width: 100%;
@@ -239,11 +244,16 @@ p {
     display: flex;
     align-items: center;
     background-color: #d6d6d6;
+    /* background: url("/pictures/backgrounds/3706.jpg");
+    background-size: auto 100%;
+    background-position: 600em;
+    backdrop-filter: blur(5px); */
   }
+  
   .section__main {
     max-width: 80em;
     width: 50em;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.751);
     border-radius: 1em;
     min-height: 80vh;
   }
