--- a/css/section-primary-team.css
+++ b/css/section-primary-team.css
@@ -43,6 +43,9 @@ body {
 .new-table-row:nth-child(odd) {
   background-color: rgb(237, 237, 237);
 }
+.new-table-row:nth-child(even) {
+  background-color: rgb(255, 255, 255);
+}
 
 .new-table-row:hover {
   transition: 0.1s;
